--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ build/static/js/runtime-main.d51f824c.js.map
 build/static/media/logo.5d5d9eef.svg
 test.http
 makefile
+build/precache-manifest.36f69dff2692d42da95f75184a92a5cb.js
+build/static/js/2.ca7da35d.chunk.js
+build/static/js/2.ca7da35d.chunk.js.LICENSE.txt
+build/static/js/2.ca7da35d.chunk.js.map
+build/static/js/main.e13da62c.chunk.js
+build/static/js/main.e13da62c.chunk.js.map
