--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.6.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "crypto-js": "^4.0.0",
     "dayjs": "^1.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
