--- a/react/package.json
+++ b/react/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.2",
     "crypto-js": "^4.0.0",
     "dayjs": "^1.9.1",
+    "formik": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
