--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ build/static/js/2.ca7da35d.chunk.js.map
 build/static/js/main.e13da62c.chunk.js
 build/static/js/main.e13da62c.chunk.js.map
 key.png
+test.html
