--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ build/static/js/main.e13da62c.chunk.js
 build/static/js/main.e13da62c.chunk.js.map
 key.png
 test.html
+react/build.7z
+komica.conf
